fixing spacing on carousel arrows

--- a/dev/css/component/carousel--hero.css
+++ b/dev/css/component/carousel--hero.css
@@ -67,7 +67,7 @@
     }
 
     .carousel-control {
-        padding-top: 150px;
+        padding-top: 100px;
     }
 
     .carousel-caption--hero {
